--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,15 @@
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.0.0</version>
         </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-javadoc-plugin</artifactId>
+          <version>3.1.1</version>
+          <configuration>
+            <show>public</show>
+            <outputDirectory>src\main</outputDirectory>
+          </configuration>
+      </plugin>
       </plugins>
     </pluginManagement>
   </build>
